Fix hero button link and adjust margin in home page, and adjust margin and text alignment in sign-in and sign-up pages

--- a/home/style.css
+++ b/home/style.css
@@ -156,6 +156,7 @@ img{
           margin-left: auto;
      }
      .heroImg{
+          margin-top: -10%;
           height: 50vh!important;
      }
      .links{
